--- a/css/_media.scss
+++ b/css/_media.scss
@@ -11,14 +11,14 @@
 
     main {
       flex: 0 1 70%;
-    {
+     
 
       h1 {
         padding: 0 4rem 0;
       }
 
       p {
-        padding: 1rem 4rem;
+        padding: 0.4rem 4rem;
       }
 
       ul {
@@ -28,11 +28,11 @@
       ul ul {
         padding: 0rem 2.4rem;
       }
-    }
-
-
-     h3 {
-      padding: 0 4rem 0;
+    
+      h3 {
+        padding: 0 4rem 0;
+      }
+     
     }
 
     div#overasider {
@@ -123,6 +123,16 @@
 
     .curtain {
       display: none;
+    }
+
+
+    article {
+
+      figure {
+        max-width: none;
+        margin: 2rem 0;
+        width: 100%
+      }
     }
 
 }
