--- a/css/ss.css
+++ b/css/ss.css
@@ -136,18 +136,24 @@ article {
   article p {
     max-width: 80rem;
     margin: 1rem auto 1rem;
-    padding: 0 1.6rem 0;
+    padding: 0.4rem 1.6rem 0.4rem;
     font-size: 1.8rem; }
   article ul {
-    max-width: 70rem;
+    max-width: 75rem;
     margin: 1rem auto 1rem;
-    padding: 0 2.4rem 0;
+    padding: 0 1rem 0 2.2rem;
     list-style-type: none; }
+    article ul li {
+      margin-bottom: 1rem;
+      padding-left: 2.2rem;
+      text-indent: -2.2rem; }
     article ul li:before {
       content: '\25E5';
       margin-right: 1rem; }
   article ul ul {
-    margin: 0 auto 0; }
+    margin: 0.4rem auto 0; }
+    article ul ul li:before {
+      content: '\25B9'; }
   article pre {
     display: block;
     margin: 2rem 0;
@@ -179,6 +185,9 @@ article {
     margin: 0;
     padding: 0;
     width: 100%; }
+  article figure {
+    max-width: 80rem;
+    margin: 2rem auto 2rem; }
   article footer {
     margin: 3.2rem auto 1rem;
     padding: 0 2rem;
@@ -351,24 +360,19 @@ footer#thelastword {
 @media (max-width: 1350px) and (min-width: 900px) {
   main {
     flex: 0 1 70%; }
+    main h1 {
+      padding: 0 4rem 0; }
+    main p {
+      padding: 0.4rem 4rem; }
+    main ul {
+      padding: 1rem 6rem; }
+    main ul ul {
+      padding: 0rem 2.4rem; }
+    main h3 {
+      padding: 0 4rem 0; }
 
   div#overasider {
     width: 30%; }
-
-  main h1 {
-    padding: 0 4rem 0; }
-
-  main p {
-    padding: 1rem 4rem; }
-
-  main ul {
-    padding: 1rem 6rem; }
-
-  main ul ul {
-    padding: 0rem 2.4rem; }
-
-  main h3 {
-    padding: 0 4rem 0; }
 
   footer#thelastword {
     font-size: 1.2rem; }
@@ -415,6 +419,11 @@ footer#thelastword {
     width: 100%; }
 
   .curtain {
-    display: none; } }
+    display: none; }
+
+  article figure {
+    max-width: none;
+    margin: 2rem 0;
+    width: 100%; } }
 
 /*# sourceMappingURL=ss.css.map */
