--- a/css/ss.scss
+++ b/css/ss.scss
@@ -165,6 +165,7 @@ main {
       figure {
         margin: 2rem 0 2rem;
         padding: 0;
+
       }
 
 
@@ -224,16 +225,22 @@ article {
       p {
         max-width: 80rem;
         margin: 1rem auto 1rem;
-        padding: 0 1.6rem 0;
+        padding: 0.4rem 1.6rem 0.4rem;
         font-size: 1.8rem;
       }
 
 
       ul {
-        max-width: 70rem;
+        max-width: 75rem;
         margin: 1rem auto 1rem;
-        padding: 0 2.4rem 0;
+        padding: 0 1rem 0 2.2rem;
         list-style-type: none;
+
+        li {
+          margin-bottom: 1rem;
+          padding-left: 2.2rem;
+          text-indent: -2.2rem;
+        }
 
         li:before {
           content: '\25E5';
@@ -242,7 +249,11 @@ article {
       }
 
       ul ul {
-        margin: 0 auto 0;
+        margin: 0.4rem auto 0;
+
+        li:before {
+          content: '\25B9';
+        }
       }
 
 // li { }
@@ -292,6 +303,12 @@ article {
         margin: 0;
         padding: 0;
         width: 100%;
+      }
+
+
+      figure {
+        max-width: 80rem;
+        margin: 2rem auto 2rem;
       }
 
 
