new post, small CSS changes

--- a/css/ss.scss
+++ b/css/ss.scss
@@ -561,6 +561,17 @@ footer#thelastword {
 
 }
 
+// ==============================================
+
+
+
+@import "res";
+
+
+
+
+
+
 
 
 // ==============================================
