--- a/css/_media.scss
+++ b/css/_media.scss
@@ -13,7 +13,7 @@
       flex: 0 1 70%;
 
 
-      h1 {
+      h1, h2, h3 {
         padding: 0 4rem 0;
       }
 
@@ -29,9 +29,9 @@
         padding: 0rem 2.4rem;
       }
 
-      h3 {
-        padding: 0 4rem 0;
-      }
+      // h3 {
+      //   padding: 0 4rem 0;
+      // }
 
     }
 
@@ -77,6 +77,10 @@
 
         h1 {
             font-size: 10vw;
+        }
+
+        h2 {
+          font-size: 8vw;
         }
 
         dl {
