--- a/css/ss.scss
+++ b/css/ss.scss
@@ -214,10 +214,22 @@ article {
     //     font-size: 4rem;
     //   }
 
+      h2 {
+        max-width: 80rem;
+        margin: 2.4rem auto 1rem;
+        padding: 0 2rem 0;
+        font-size: 3.6rem;
+      }
+
+
 
       h3 {
         margin-top: 0;
         margin-bottom: 2rem;
+
+        + h2 {
+          margin-top: 1rem;
+        }
       }
 
 
