style audio element, year update, new post

--- a/css/_media.scss
+++ b/css/_media.scss
@@ -33,6 +33,11 @@
       //   padding: 0 4rem 0;
       // }
 
+      
+      audio {
+        padding: 0 4rem;
+      }
+
     }
 
     div#overasider {
