--- a/css/ss.css
+++ b/css/ss.css
@@ -195,6 +195,12 @@ article {
   article figure {
     max-width: 80rem;
     margin: 2rem auto 2rem; }
+  article audio {
+    display: block;
+    max-width: 80rem;
+    width: 100%;
+    margin: 1rem auto 1rem;
+    padding: 0 2rem; }
   article footer {
     margin: 3.2rem auto 1rem;
     padding: 0 2rem;
@@ -219,8 +225,12 @@ main.index {
 main.core h1 {
   text-shadow: -0.2rem 0.2rem 0 #f74d4d; }
 
-main.post h1 {
-  text-shadow: -0.2rem 0.2rem 0 #872bff; }
+main.post {
+  /* audio { */
+  /*   box-shadow: -0.2rem 0.2rem 0 $k0Z; */
+  /* } */ }
+  main.post h1 {
+    text-shadow: -0.2rem 0.2rem 0 #872bff; }
 
 div#asider {
   /* position: absolute; */
@@ -402,6 +412,8 @@ footer#thelastword {
       padding: 1rem 6rem; }
     main ul ul {
       padding: 0rem 2.4rem; }
+    main audio {
+      padding: 0 4rem; }
 
   div#overasider {
     width: 30%; }
