--- a/css/ss.css
+++ b/css/ss.css
@@ -107,7 +107,7 @@ main {
     width: 60%;
     height: auto; }
   main figure {
-    margin: 2rem 0 2rem;
+    margin: 3.6rem 0 3.6rem;
     padding: 0; }
   main dl {
     font-size: 2.4rem; }
@@ -231,6 +231,24 @@ main.post {
   /* } */ }
   main.post h1 {
     text-shadow: -0.2rem 0.2rem 0 #872bff; }
+
+div.buttonbox {
+  max-width: 80rem;
+  display: flex;
+  margin: 2.4rem auto 2.4rem;
+  padding: 0 8rem; }
+  div.buttonbox a {
+    font-family: inherit;
+    line-height: 1.6rem;
+    flex-grow: 1;
+    background: none;
+    border: none;
+    text-align: center; }
+    div.buttonbox a span.buttontitle {
+      font-size: larger;
+      font-weight: bold; }
+    div.buttonbox a:hover {
+      color: #888888; }
 
 div#asider {
   /* position: absolute; */
