--- a/css/ss.scss
+++ b/css/ss.scss
@@ -162,7 +162,7 @@ main {
 
 
       figure {
-        margin: 2rem 0 2rem;
+        margin: 3.6rem 0 3.6rem;
         padding: 0;
 
       }
@@ -383,6 +383,37 @@ main.post {
       /* } */
 
 }
+
+
+div.buttonbox {
+  max-width: 80rem;
+  display: flex;
+  margin: 2.4rem auto 2.4rem;
+  padding: 0 8rem;
+
+  a {
+    font-family: inherit;
+    line-height: 1.6rem;
+    flex-grow: 1;
+    background: none;
+    border: none;
+    text-align: center;
+  
+
+    span.buttontitle {
+      font-size: larger;
+      font-weight: bold;
+    }
+
+    &:hover {
+      color: $k02;
+    }
+  }
+
+  }
+
+
+
 
 
 div#asider {
