added secret palette test page

--- a/css/ss.css
+++ b/css/ss.css
@@ -364,8 +364,17 @@ footer#thelastword {
 .bk0U {
   background-color: #f74d4d; }
 
+.bk0V {
+  background-color: #ff872b; }
+
+.bk0W {
+  background-color: #fffb18; }
+
 .bk0X {
   background-color: #2bff87; }
+
+.bk0Y {
+  background-color: #2ba0cb; }
 
 .bk0Z {
   background-color: #872bff; }
