made a lot of changes at once and now the goal is to get it working over the course of the next few commits, I guess

--- a/css/_kleuren.scss
+++ b/css/_kleuren.scss
@@ -8,7 +8,7 @@
 
 $k0U: hsl(     0,  91.4%, 63.53%);        // reddish
 $k0V: hsl( 26.04,   100%, 58.43%);        // orangey
-$k0W: hsl( 58.96,   100%, 54.71%);        // yellowish
+$k0W: hsl( 54   ,   100%, 64%   );        // yellowish
 $k0X: hsl(146.04,   100%, 58.43%);        // greenish
 $k0Y: hsl(196.12, 65.04%, 48.24%);        // bluish
 $k0Z: hsl(266.04,   100%, 58.43%);        // violety
@@ -23,7 +23,7 @@ $k03: hsl(     0,     0%,    80%);        // medium-light gray
 /* #FA8585 */
 /* #FF872B */
 /* #FFAD6E */
-/* #FFFB18 */
+/* #FFED47 */
 /* #FFFD9C */
 /* #2BFF87 */
 /* #A1FFCA */
