--- a/templates/overasider.html
+++ b/templates/overasider.html
@@ -3,7 +3,11 @@
   </div>
 
   <nav id="nav0">
-    <a class="bk0U" href="/index.html">dte.li</a>
+    <a class="bk0U" href="/index.html">myself</a>
+    <a class="bk0V" href="#">yield</a>
+    <!-- <a class="bk0W" href="#">etc</a>
+         <a class="bk0X" href="#">bank</a> -->
+    <a class="bk0Y" href="#">dte.li</a>
     <a class="bk0Z" href=$lpUrl$>posts</a>
     <!-- <a class="bk0X" href="#">??</a> -->
   </nav>
