--- a/templates/overasider.html
+++ b/templates/overasider.html
@@ -4,10 +4,10 @@
 
   <nav id="nav0">
     <a class="bk0U" href="/index.html">myself</a>
-    <a class="bk0V" href="#">yield</a>
+    <!-- <a class="bk0V" href="#">yield</a> -->
     <!-- <a class="bk0W" href="#">etc</a>
          <a class="bk0X" href="#">bank</a> -->
-    <a class="bk0Y" href="#">dte.li</a>
+    <a class="bk0Y" href="/meta/ntc.html">dte.li</a>
     <a class="bk0Z" href=$lpUrl$>posts</a>
     <!-- <a class="bk0X" href="#">??</a> -->
   </nav>
@@ -15,6 +15,6 @@
   <!-- ..id="myleftfoot" lol -->
   <footer id="thelastword">
     <p>&copy; (or whatever) 2017 Eli T. Drumm</p>
-    <p>made with Hakyll and <a href="/ntc.html">other technologies</a></p>
+    <p>made with Hakyll and <a href="/meta/ntc.html">other technologies</a></p>
   </footer>
 </div>
