--- a/templates/postpage.html
+++ b/templates/postpage.html
@@ -9,7 +9,7 @@ $partial("templates/head.html")$
   </main>
 
   <div id="asider">
-    <div class="postlist">
+    <div id="postlist">
       <ul>
 
 	      $entries$
