--- a/templates/sitepage.html
+++ b/templates/sitepage.html
@@ -3,18 +3,18 @@ $partial("templates/head.html")$
 <body>
 
 <!-- ... -->
-
-  $body$
-
+  <main class="site">
+    $body$
+  </main>
 
   <div id="asider">
-    <nav id="corenav">
-      <h2><a href="#">overview</a></h2>
-      <h2><a href="#">to-implement</a></h2>
-      <h2><a href="#">testpage</a></h2>
-      <h2><a href="#">typography</a></h2>
-      <h2><a href="#">palette</a></h2>
-      <h2><a href="#">versions</a></h2>
+    <nav id="sitenav">
+      <h2><a href="/meta/ntc.html">overview</a></h2>
+      <h2><a href="/meta/to-implement.html">to-implement</a></h2>
+      <!-- <h2><a href="#">testpage</a></h2>
+           <h2><a href="#">typography</a></h2> -->
+      <h2><a href="/aanvullend/palettetest2.html">palette</a></h2>
+      <!-- <h2><a href="#">versions</a></h2> -->
     </nav>
   </div>
 
