--- a/templates/yieldpage.html
+++ b/templates/yieldpage.html
@@ -3,13 +3,16 @@ $partial("templates/head.html")$
 <body>
 
 <!-- ... -->
-
-  $body$
+  <main class="yield">
+    $body$
+  </main>
 
 
   <div id="asider">
-    <nav id="corenav">
-      <h2><a href="#">études</a></h2>
+    <nav id="yieldnav">
+
+
+      <h2><a href="#">scrawls</a></h2>
 
 
       <h2><a href="#">photos</a></h2>
@@ -17,8 +20,9 @@ $partial("templates/head.html")$
       <h2><a href="#">mixes</a></h2>
       <!-- <h2><a href="#">music</a></h2> -->
 
-
       <!-- <h2><a href="#">crosswords</a></h2> -->
+
+      <!-- <h2><a href="tapas.html">tapas</a></h2> -->
     </nav>
   </div>
 
