added 'sector' metadata field, adding to 'to-implement' list, other edits

--- a/templates/overasider.html
+++ b/templates/overasider.html
@@ -7,7 +7,7 @@
     <!-- <a class="bk0V" href="#">yield</a> -->
     <!-- <a class="bk0W" href="#">etc</a>
          <a class="bk0X" href="#">bank</a> -->
-    <a class="bk0Y" href="/meta/ntc.html">dte.li</a>
+    <a class="bk0Y" href="/meta/ntc.html">site</a>
     <a class="bk0Z" href=$lpUrl$>posts</a>
     <!-- <a class="bk0X" href="#">??</a> -->
   </nav>
