--- a/templates/sitepage.html
+++ b/templates/sitepage.html
@@ -11,8 +11,8 @@ $partial("templates/head.html")$
     <nav id="sitenav">
       <h2><a href="/meta/ntc.html">overview</a></h2>
       <h2><a href="/meta/to-implement.html">to-implement</a></h2>
-      <!-- <h2><a href="#">testpage</a></h2>
-           <h2><a href="#">typography</a></h2> -->
+      <!-- <h2><a href="#">styledemo</a></h2> -->
+      <!-- <h2><a href="#">typography</a></h2> -->
       <h2><a href="/aanvullend/palettetest2.html">palette</a></h2>
       <!-- <h2><a href="#">versions</a></h2> -->
     </nav>
