formatted palette page

--- a/templates/sitepage.html
+++ b/templates/sitepage.html
@@ -13,7 +13,7 @@ $partial("templates/head.html")$
       <h2><a href="/meta/to-implement.html">to-implement</a></h2>
       <!-- <h2><a href="#">styledemo</a></h2> -->
       <!-- <h2><a href="#">typography</a></h2> -->
-      <h2><a href="/aanvullend/palettetest2.html">palette</a></h2>
+      <h2><a href="/meta/palette.html">palette</a></h2>
       <!-- <h2><a href="#">versions</a></h2> -->
     </nav>
   </div>
