--- a/css/ss.css
+++ b/css/ss.css
@@ -401,7 +401,8 @@ footer#thelastword {
   padding: 0 2em 4rem;
   text-align: right; }
   footer#thelastword p {
-    margin: 0; }
+    margin: 0;
+    color: #505050; }
 
 .tex sub {
   text-transform: uppercase;
