--- a/css/ss.css
+++ b/css/ss.css
@@ -55,6 +55,7 @@ pre, code, kbd, samp {
   font-family: Inconsolata, monospace; }
 
 main {
+  min-height: 60rem;
   flex: 0 1 64%;
   border: 0;
   padding: 2rem 0 4rem;
@@ -518,23 +519,25 @@ footer#thelastword {
   body {
     flex-direction: column; }
 
-  main h1 {
-    font-size: 10vw; }
-  main h2 {
-    font-size: 8vw; }
-  main dl dt {
-    width: 100%;
-    margin: 0.5rem 0 0 0;
-    padding: 0 2rem 0 4rem;
-    text-align: left; }
-  main dl dd {
-    width: 100%;
-    margin: 0 0 0.5rem 0;
-    padding: 0 2rem 0 6rem; }
-  main dl dd + dd {
-    margin-top: 0; }
-  main dl dt.blankdt {
-    display: none; }
+  main {
+    position: relative; }
+    main h1 {
+      font-size: 10vw; }
+    main h2 {
+      font-size: 8vw; }
+    main dl dt {
+      width: 100%;
+      margin: 0.5rem 0 0 0;
+      padding: 0 2rem 0 4rem;
+      text-align: left; }
+    main dl dd {
+      width: 100%;
+      margin: 0 0 0.5rem 0;
+      padding: 0 2rem 0 6rem; }
+    main dl dd + dd {
+      margin-top: 0; }
+    main dl dt.blankdt {
+      display: none; }
 
   div#asider {
     width: 100%; }
