--- a/css/ss.scss
+++ b/css/ss.scss
@@ -70,6 +70,7 @@ main {
   // width: 60%;
   // margin-left: 40%;
   // height: 100%;
+  min-height: 60rem;
   flex: 0 1 64%;
   border: 0;
   padding: 2rem 0 4rem;
