--- a/css/ss.css
+++ b/css/ss.css
@@ -152,11 +152,11 @@ main {
 
 article {
   margin: 2rem auto 4rem;
-  font-size: 1.8rem; }
+  font-size: 2rem; }
   article h1 {
     font-size: 6rem; }
   article h2 {
-    max-width: 80rem;
+    max-width: 60rem;
     margin: 2.4rem auto 1rem;
     padding: 0 2rem 0;
     font-size: 3.6rem; }
@@ -166,19 +166,22 @@ article {
     article h3 + h2 {
       margin-top: 1rem; }
   article p {
-    max-width: 80rem;
+    max-width: 60rem;
     margin: 1rem auto 1rem;
     padding: 0.4rem 1.6rem 0.4rem;
-    font-size: 1.8rem; }
+    font-size: 2rem;
+    line-height: 140%; }
   article ul {
-    max-width: 75rem;
+    max-width: 55rem;
     margin: 1rem auto 1rem;
     padding: 0 1rem 0 2.2rem;
     list-style-type: none; }
     article ul li {
       margin-bottom: 1rem;
       padding-left: 2.2rem;
-      text-indent: -2.2rem; }
+      text-indent: -2.2rem;
+      font-size: 2rem;
+      line-height: 140%; }
     article ul li:before {
       content: '\25E5';
       margin-right: 1rem; }
@@ -556,9 +559,20 @@ footer#thelastword {
   .curtain {
     display: none; }
 
-  article figure {
-    max-width: none;
-    margin: 2rem 0;
-    width: 100%; } }
+  article {
+    font-size: 2rem; }
+    article h2 {
+      max-width: 90%; }
+    article p {
+      max-width: 90%;
+      font-size: 2rem; }
+    article ul {
+      max-width: 80%; }
+      article ul li {
+        font-size: 2rem; }
+    article figure {
+      max-width: none;
+      margin: 2rem 0;
+      width: 100%; } }
 
 /*# sourceMappingURL=ss.css.map */
