--- a/templates/postpage.html
+++ b/templates/postpage.html
@@ -2,6 +2,10 @@ $partial("templates/head.html")$
 
 <body>
 
+  <script type="text/javascript" async
+    src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML">
+  </script>
+  
   <main class="post">
 
       $body$
